--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -8,8 +8,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  lint:
-    name: Run Linter
+  build:
+    name: Build
     runs-on: [ ubuntu-latest ]
     steps:
       - name: Check Out
@@ -20,20 +20,5 @@ jobs:
         with:
           java-version: 1.8
 
-      - name: Run Linter
-        run: ./gradlew --parallel lint
-
-  unit_tests:
-    name: Run Unit Tests
-    runs-on: [ ubuntu-latest ]
-    steps:
-      - name: Check Out
-        uses: actions/checkout@v2
-
-      - name: Set Up JDK
-        uses: actions/setup-java@v1.4.3
-        with:
-          java-version: 1.8
-
-      - name: Unit Tests
-        run: ./gradlew --parallel test
+      - name: Build
+        run: ./gradlew build
