--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ android {
     compileSdkVersion 30
     defaultConfig {
         applicationId "com.rocketinsights.android"
-        minSdkVersion 26
+        minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
         versionName app_version_name
@@ -253,6 +253,10 @@ dependencies {
 
     // Lottie
     implementation "com.airbnb.android:lottie:$lottie_version"
+
+    // Dates
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.3.1'
+    testImplementation 'org.threeten:threetenbp:1.5.1'
 
     // Test
     // Unit testing framework
