--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,6 +99,8 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+        // Flag to enable support for the new language APIs
+        coreLibraryDesugaringEnabled true
     }
     kotlinOptions {
         jvmTarget = '1.8'
@@ -173,6 +175,9 @@ dependencies {
     implementation "androidx.activity:activity-ktx:$ktx_activity_version"
     implementation "androidx.fragment:fragment-ktx:$ktx_fragment_version"
     implementation "androidx.core:core-ktx:$core_version"
+
+    // Java 8+ API desugaring support
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
 
     // Code style
     ktlint "com.pinterest:ktlint:$ktlint_version"
