--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,9 +17,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set Up JDK
-        uses: actions/setup-java@v1.4.3
+        uses: actions/setup-java@v2
         with:
-          java-version: 1.8
+          distribution: 'zulu'
+          java-version: '11'
 
       - name: Build
         run: ./gradlew build
@@ -33,9 +34,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set Up JDK
-        uses: actions/setup-java@v1.4.3
+        uses: actions/setup-java@v2
         with:
-          java-version: 1.8
+          distribution: 'zulu'
+          java-version: '11'
 
       - name: Set File Name Environment Variable
         run: echo "GENERATED_FILE_NAME=$(./gradlew -q fileName | head -n 1 | cut -d- -f1)" >> $GITHUB_ENV
