--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,7 +68,7 @@ android {
             manifestPlaceholders = [appName: "@string/app_name_dev"]
             applicationIdSuffix ".dev"
             versionNameSuffix "-" + git_hash + "-dev"
-            resValue 'string', 'workManager', "com.rocketinsights.android.dev.workmanager-init"
+            resValue 'string', 'appStartup', "com.rocketinsights.android.dev.androidx-startup"
             resValue 'string', 'fileProvider', "com.rocketinsights.android.fileprovider.dev"
 
             // Google Maps
@@ -82,7 +82,7 @@ android {
             dimension "default"
 
             manifestPlaceholders = [appName: "@string/app_name"]
-            resValue 'string', 'workManager', "com.rocketinsights.android.workmanager-init"
+            resValue 'string', 'appStartup', "com.rocketinsights.android.androidx-startup"
             resValue 'string', 'fileProvider', "com.rocketinsights.android.fileprovider.prod"
 
             // Google Maps
@@ -103,7 +103,11 @@ android {
         coreLibraryDesugaringEnabled true
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+        freeCompilerArgs += [
+                "-Xopt-in=kotlin.RequiresOptIn",
+                "-Xopt-in=kotlinx.coroutines.ExperimentalCoroutinesApi",
+                "-Xopt-in=kotlinx.coroutines.FlowPreview"]
     }
     testOptions {
         unitTests.all {
@@ -124,45 +128,46 @@ android {
 
 ext {
     legacy_version = "1.0.0"
-    constraint_layout_version = "2.0.4"
-    ktlint_version = "0.41.0"
-    koin_version = "3.0.1-beta-2"
-    appCompat_version = "1.2.0"
-    material_design_version = "1.3.0"
-    coroutines_version = "1.4.3"
-    timber_version = "4.7.1"
+    constraint_layout_version = "2.1.1"
+    ktlint_version = "0.42.1"
+    koin_version = "3.1.2"
+    appCompat_version = "1.3.1"
+    material_design_version = "1.4.0"
+    coroutines_version = "1.5.2"
+    timber_version = "5.0.1"
     moshi_version = "1.12.0"
     retrofit_version = "2.9.0"
     leak_canary_version = "2.7"
     lifecycle_extensions = "2.2.0"
     lifecycle_version = "2.3.1"
-    room_version = "2.2.6"
-    coil_version = "1.1.1"
-    junit_version = "1.1.2"
+    room_version = "2.3.0"
+    coil_version = "1.4.0"
+    junit_version = "1.1.3"
     test_rule_version = "1.0.2"
-    mockito_version = "3.1.0"
-    espresso_version = "3.1.1"
+    mockito_version = "3.2.0"
+    espresso_version = "3.4.0"
     core_testing_version = "2.1.0"
-    mockito_inline_version = "3.9.0"
-    firebase_version = "27.0.0"
-    firebase_ui_version = "7.1.1"
-    kotlinx_coroutines_play_services_version = "1.4.3"
-    datastore_version = "1.0.0-alpha08"
-    ktx_activity_version = "1.3.0-alpha06"
-    ktx_fragment_version = "1.3.2"
-    play_services_maps_version = "17.0.0"
+    mockito_inline_version = "3.12.4"
+    firebase_version = "28.4.2"
+    firebase_ui_version = "8.0.0"
+    kotlinx_coroutines_play_services_version = "1.5.2"
+    datastore_version = "1.0.0"
+    ktx_activity_version = "1.3.1"
+    ktx_fragment_version = "1.3.6"
+    play_services_maps_version = "17.0.1"
     play_services_location_version = "18.0.0"
-    google_maps_utils_version = "2.2.2"
+    google_maps_utils_version = "2.2.6"
     quickpermissions_version = "0.4.1"
-    work_version = "2.5.0"
-    ok_http_version = "4.9.0"
-    chuck_version = "3.4.0"
-    lottie_version = "3.7.0"
-    core_version = "1.5.0-rc01"
+    work_version = "2.6.0"
+    ok_http_version = "4.9.1"
+    chuck_version = "3.5.2"
+    lottie_version = "4.2.0"
+    core_version = "1.6.0"
+    desugar_jdk_version = "1.1.5"
 }
 
 jacoco {
-    toolVersion = "0.8.5"
+    toolVersion = "0.8.7"
 }
 
 dependencies {
@@ -171,13 +176,14 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$appCompat_version"
     implementation "com.google.android.material:material:$material_design_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
     implementation "androidx.activity:activity-ktx:$ktx_activity_version"
     implementation "androidx.fragment:fragment-ktx:$ktx_fragment_version"
     implementation "androidx.core:core-ktx:$core_version"
 
     // Java 8+ API desugaring support
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:$desugar_jdk_version"
 
     // Code style
     ktlint "com.pinterest:ktlint:$ktlint_version"
@@ -226,7 +232,6 @@ dependencies {
 
     // Koin
     implementation "io.insert-koin:koin-android:$koin_version"
-    implementation "io.insert-koin:koin-android-ext:$koin_version"
     implementation "io.insert-koin:koin-androidx-workmanager:$koin_version"
     testImplementation "io.insert-koin:koin-test:$koin_version"
 
@@ -273,16 +278,9 @@ dependencies {
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
 
     // Espresso
-    androidTestImplementation("androidx.test.espresso:espresso-core:$espresso_version", {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
 
-    //there's a conflict in the test libraries here, so we have to explicitly set these
     testImplementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     testImplementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    testImplementation("androidx.arch.core:core-testing:$core_testing_version", {
-        exclude group: 'com.android.support', module: 'support-compat'
-        exclude group: 'com.android.support', module: 'support-annotations'
-        exclude group: 'com.android.support', module: 'support-core-utils'
-    })
+    testImplementation "androidx.arch.core:core-testing:$core_testing_version"
 }
