--- a/.github/workflows/release_candidate.yml
+++ b/.github/workflows/release_candidate.yml
@@ -27,7 +27,7 @@ jobs:
   build_apk:
     name: Build Test APK and Upload to Firebase
     runs-on: [ ubuntu-latest ]
-    needs: [ lint, unit_tests ]
+    needs: [ build ]
     steps:
       - name: Check Out
         uses: actions/checkout@v2
@@ -37,6 +37,7 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: '11'
+
       - name: Set File Name Environment Variable
         run: echo "GENERATED_FILE_NAME=$(./gradlew -q fileName | head -n 1)" >> $GITHUB_ENV
 
@@ -65,7 +66,7 @@ jobs:
   firebase_tests:
     name: Run UI Tests with Firebase Test Lab
     runs-on: [ ubuntu-latest ]
-    needs: [ lint, unit_tests ]
+    needs: [ build ]
 
     steps:
       - name: Check Out
