--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,13 @@
 
 buildscript {
     ext {
-        kotlin_version = '1.5.31'
-        gradle_version = '7.0.2'
-        dependency_check_version = '6.1.5'
-        gradle_versions_version = '0.39.0'
+        kotlin_version = "1.5.30"
+        gradle_version = "7.0.2"
+        dependency_check_version = "6.1.5"
+        gradle_versions_version = "0.39.0"
         navigation_version = "2.3.5"
         google_services_version = "4.3.10"
+        compose_version = "1.0.3"
     }
     repositories {
         gradlePluginPortal()
