--- a/app/build.gradle
+++ b/app/build.gradle
@@ -150,10 +150,9 @@ ext {
     coil_version = "1.4.0"
     junit_version = "1.1.3"
     test_rule_version = "1.0.2"
-    mockito_version = "3.2.0"
+    mockito_version = "4.0.0"
     espresso_version = "3.4.0"
     core_testing_version = "2.1.0"
-    mockito_inline_version = "3.12.4"
     firebase_version = "28.4.2"
     firebase_ui_version = "8.0.0"
     kotlinx_coroutines_play_services_version = "1.5.2"
@@ -165,7 +164,7 @@ ext {
     google_maps_utils_version = "2.2.6"
     quickpermissions_version = "0.4.1"
     work_version = "2.6.0"
-    ok_http_version = "4.9.1"
+    ok_http_version = "4.9.2"
     chuck_version = "3.5.2"
     lottie_version = "4.2.0"
     core_version = "1.6.0"
@@ -297,16 +296,13 @@ dependencies {
 
     // Mockito
     testImplementation "org.mockito.kotlin:mockito-kotlin:$mockito_version"
-    testImplementation "org.mockito:mockito-inline:$mockito_inline_version"
+    testImplementation "org.mockito:mockito-inline:$mockito_version"
 
     // Test Coroutines
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
 
     // Espresso
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
-
-    // Compose UI Tests
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
 
     testImplementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     testImplementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
