--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'kotlin-parcelize'
     id 'jacoco'
     id 'androidx.navigation.safeargs.kotlin'
     id 'com.github.ben-manes.versions'
@@ -136,7 +137,7 @@ ext {
     legacy_version = "1.0.0"
     constraint_layout_version = "2.1.1"
     ktlint_version = "0.42.1"
-    koin_version = "3.1.2"
+    koin_version = "3.1.3"
     appCompat_version = "1.3.1"
     material_design_version = "1.4.0"
     coroutines_version = "1.5.2"
