--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,11 +34,11 @@ def API_URL_DEV = "\"https://run.mocky.io/v3/\""
 def API_URL_PROD = "\"https://run.mocky.io/v3/\""
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
     defaultConfig {
         applicationId "com.rocketinsights.android"
         minSdkVersion 23
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName app_version_name
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -146,8 +146,8 @@ ext {
     retrofit_version = "2.9.0"
     leak_canary_version = "2.7"
     lifecycle_extensions = "2.2.0"
-    lifecycle_version = "2.3.1"
-    room_version = "2.3.0"
+    lifecycle_version = "2.4.1"
+    room_version = "2.4.2"
     coil_version = "1.4.0"
     junit_version = "1.1.3"
     test_rule_version = "1.0.2"
@@ -155,6 +155,7 @@ ext {
     espresso_version = "3.4.0"
     core_testing_version = "2.1.0"
     firebase_version = "28.4.2"
+    //firebase_version = "29.2.1"
     firebase_ui_version = "8.0.0"
     kotlinx_coroutines_play_services_version = "1.5.2"
     datastore_version = "1.0.0"
@@ -162,9 +163,11 @@ ext {
     ktx_fragment_version = "1.3.6"
     play_services_maps_version = "17.0.1"
     play_services_location_version = "18.0.0"
+    /*play_services_maps_version = "18.0.2"
+    play_services_location_version = "19.0.1"*/
     google_maps_utils_version = "2.2.6"
     quickpermissions_version = "0.4.1"
-    work_version = "2.6.0"
+    work_version = "2.7.1"
     ok_http_version = "4.9.2"
     chuck_version = "3.5.2"
     lottie_version = "4.2.0"
@@ -248,9 +251,12 @@ dependencies {
     // Firebase
     implementation platform("com.google.firebase:firebase-bom:$firebase_version")
     implementation "com.firebaseui:firebase-ui-auth:$firebase_ui_version"
+    implementation 'com.google.android.gms:play-services-auth:20.1.0'
+
     // Source: https://github.com/Kotlin/kotlinx.coroutines/tree/master/integration/kotlinx-coroutines-play-services
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:$kotlinx_coroutines_play_services_version"
     implementation 'com.google.firebase:firebase-messaging-ktx'
+    implementation 'com.facebook.android:facebook-android-sdk:13.0.0'
 
     // DataStore
     implementation "androidx.datastore:datastore-preferences:$datastore_version"
