--- a/app/build.gradle
+++ b/app/build.gradle
@@ -155,16 +155,14 @@ ext {
     espresso_version = "3.4.0"
     core_testing_version = "2.1.0"
     firebase_version = "28.4.2"
-    //firebase_version = "29.2.1"
     firebase_ui_version = "8.0.0"
+    firebase_auth_version = "20.1.0"
     kotlinx_coroutines_play_services_version = "1.5.2"
     datastore_version = "1.0.0"
     ktx_activity_version = "1.3.1"
     ktx_fragment_version = "1.3.6"
     play_services_maps_version = "17.0.1"
     play_services_location_version = "18.0.0"
-    /*play_services_maps_version = "18.0.2"
-    play_services_location_version = "19.0.1"*/
     google_maps_utils_version = "2.2.6"
     quickpermissions_version = "0.4.1"
     work_version = "2.7.1"
@@ -251,12 +249,11 @@ dependencies {
     // Firebase
     implementation platform("com.google.firebase:firebase-bom:$firebase_version")
     implementation "com.firebaseui:firebase-ui-auth:$firebase_ui_version"
-    implementation 'com.google.android.gms:play-services-auth:20.1.0'
+    implementation "com.google.android.gms:play-services-auth:$firebase_auth_version"
 
     // Source: https://github.com/Kotlin/kotlinx.coroutines/tree/master/integration/kotlinx-coroutines-play-services
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:$kotlinx_coroutines_play_services_version"
     implementation 'com.google.firebase:firebase-messaging-ktx'
-    implementation 'com.facebook.android:facebook-android-sdk:13.0.0'
 
     // DataStore
     implementation "androidx.datastore:datastore-preferences:$datastore_version"
