--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,9 @@ apply from: 'jacoco.gradle'
 apply from: 'lint.gradle'
 apply from: 'build-scripts.gradle'
 
+apply plugin: 'kotlin-kapt'
+apply plugin: 'dagger.hilt.android.plugin'
+
 repositories {
     mavenCentral()
     maven { url 'https://maven.google.com' }
@@ -171,12 +174,12 @@ ext {
     lottie_version = "4.2.0"
     core_version = "1.6.0"
     desugar_jdk_version = "1.1.5"
+    hilt_version = "2.38.1"
     // Compose
     activity_compose_version = "1.3.1"
     constraintlayout_compose_version = "1.0.0-rc01"
     viewmodel_compose_version = "1.0.0-alpha07"
 }
-
 jacoco {
     toolVersion = "0.8.7"
 }
@@ -207,6 +210,9 @@ dependencies {
     kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshi_version"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
+
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
 
     // Http Logging Interceptor
     implementation "com.squareup.okhttp3:okhttp:$ok_http_version"
@@ -292,6 +298,14 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$viewmodel_compose_version"
     implementation "com.google.android.material:compose-theme-adapter:$compose_version"
 
+    // Hilt
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+
+    def hilt_lifecycle_viewmodel = "1.0.0-alpha03"
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_lifecycle_viewmodel"
+    kapt "androidx.hilt:hilt-compiler:$hilt_lifecycle_viewmodel"
+
     // Test
     // Unit testing framework
     androidTestImplementation "com.android.support.test:rules:$test_rule_version"
@@ -311,4 +325,8 @@ dependencies {
     testImplementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     testImplementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     testImplementation "androidx.arch.core:core-testing:$core_testing_version"
+}
+
+kapt {
+    correctErrorTypes true
 }
