--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         navigation_version = "2.3.5"
         google_services_version = "4.3.10"
         compose_version = "1.0.3"
+        hilt_version = "2.28-alpha"
     }
     repositories {
         gradlePluginPortal()
@@ -22,6 +23,7 @@ buildscript {
         classpath "com.google.gms:google-services:$google_services_version"
         classpath "org.owasp:dependency-check-gradle:$dependency_check_version"
         classpath "com.github.ben-manes:gradle-versions-plugin:$gradle_versions_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
