--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,11 +32,14 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AndroidBase.Main">
-
+        android:theme="@style/Theme.AndroidBase.Main" >
+        <activity
+            android:name=".ui.HiltActivity"
+            android:exported="false" />
         <!-- Animation Widget -->
-        <receiver android:name=".widgets.AnimationWidget"
-            android:exported="false">
+        <receiver
+            android:name=".widgets.AnimationWidget"
+            android:exported="false" >
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
