--- a/app/build.gradle
+++ b/app/build.gradle
@@ -175,6 +175,8 @@ ext {
     core_version = "1.6.0"
     desugar_jdk_version = "1.1.5"
     hilt_version = "2.38.1"
+    hilt_lifecycle_viewmodel = "1.0.0-alpha03"
+
     // Compose
     activity_compose_version = "1.3.1"
     constraintlayout_compose_version = "1.0.0-rc01"
@@ -211,7 +213,6 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
 
-    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
 
     // Http Logging Interceptor
@@ -298,11 +299,10 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$viewmodel_compose_version"
     implementation "com.google.android.material:compose-theme-adapter:$compose_version"
 
-    // Hilt
+    // Hilt: Official Google Dependency Injection Library
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
-    def hilt_lifecycle_viewmodel = "1.0.0-alpha03"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_lifecycle_viewmodel"
     kapt "androidx.hilt:hilt-compiler:$hilt_lifecycle_viewmodel"
 
