--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
         navigation_version = "2.3.5"
         google_services_version = "4.3.10"
         compose_version = "1.0.3"
-        hilt_version = "2.28-alpha"
+        hilt_version = "2.38.1"
     }
     repositories {
         gradlePluginPortal()
