--- a/app/build.gradle
+++ b/app/build.gradle
@@ -175,9 +175,11 @@ ext {
     core_version = "1.6.0"
     desugar_jdk_version = "1.1.5"
     hilt_version = "2.38.1"
+    glide_version = "4.13.0"
+    compose_ui_tool = "1.1.1"
 
     // Compose
-    activity_compose_version = "1.3.1"
+    activity_compose_version = '1.4.0'
     constraintlayout_compose_version = "1.0.0-rc01"
     viewmodel_compose_version = "1.0.0-alpha07"
 }
@@ -297,10 +299,17 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout-compose:$constraintlayout_compose_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$viewmodel_compose_version"
     implementation "com.google.android.material:compose-theme-adapter:$compose_version"
+    debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_tool"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_tool"
+
 
     // Hilt: Official Google Dependency Injection Library
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+
+    // Glide: Image loading framework
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
 
     // Test
     // Unit testing framework
